smear/tests/set/failure.stderr
error: Unsupported shape `enum`. Expected struct with no fields.
 --> tests/set/failure.rs:2:1
  |
2 | / #[smear::hashset(
3 | |   value(String)
4 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `smear::hashset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `unnamed fields`. Expected no fields.
  --> tests/set/failure.rs:10:1
   |
10 | / #[smear::btreeset(
11 | |   value(String)
12 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `smear::btreeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `named fields`. Expected no fields.
  --> tests/set/failure.rs:16:1
   |
16 | / #[smear::hashset(
17 | |   value("String"),
18 | |   attributes(derive(Clone))
19 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `smear::hashset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `one unnamed field`. Expected no fields.
  --> tests/set/failure.rs:25:1
   |
25 | / #[smear::btreeset(
26 | |   value(String)
27 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `smear::btreeset` (in Nightly builds, run with -Z macro-backtrace for more info)
